[package]
name = "lt-codes"
version = "0.1.0"
edition = "2021"

[dependencies]

bitvec = {version = "1.0.1", default_features = false, features = ["alloc"]}
blake2-rfc = {version = "0.2.18", default-features = false}
rand = "0.8.4"
rand_core = "0.6.4"
rand_pcg = "0.3.1"

[features]

default = ["std"]

std = []
