[package]
name = "lt-codes"
version = "0.1.0"
edition = "2021"

[dependencies]

blake2-rfc = {version = "0.2.18", default-features = false}
rand = {version = "0.8.4", default-features = false, features = ["alloc"]}
rand_core = {version = "0.6.4", default-features = false}
rand_pcg = {version = "0.3.1", default-features = false}

[features]

default = ["std"]
std = []

[dev-dependencies]
rand = {version = "0.8.4"}
